Add smartmeter analysis

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -264,6 +264,11 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": ""
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Datenquellen\n",
@@ -1405,7 +1410,11 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "fig = px.choropleth_mapbox(\n",
@@ -1436,7 +1445,11 @@
    "source": "Bei der Betrachtung der prozentualen Siedlungsfläche ist diese im Amt Entlebuch sehr gering. Die Region Luzern und Sursee stechen hier hervor mit anteilsmässigen höheren Werten."
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "fig = px.choropleth_mapbox(\n",
@@ -1467,7 +1480,11 @@
    "source": "Bei der Betrachtung der Waldfläche, sticht das Amt Entlebuch stark hervor. Die anderen Regionen sind sich ähnlich."
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "fig = px.choropleth_mapbox(\n",
@@ -1498,14 +1515,22 @@
    "source": "Damit die Daten ohne Fehler in die SQLite Datenbank importiert werden können, wird CH durch eine 0 ersetzt und alle Null Werte durch den String NULL ersetzt."
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": "demoValue.replace(np.nan, \"NULL\", inplace=True)",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "for index, row in demoValue.iterrows():\n",
@@ -1592,13 +1617,20 @@
     "smartmeter_df.info()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "smartmeter_df[\"timestamp\"] = '\"' + smartmeter_df[\"timestamp\"] + '\"'\n",
@@ -1632,43 +1664,37 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "Ein Vergleich in der Zeit während dem \"Tief\" und mehr als ein Jahr danach pro Gemeinde zeigt auf, wo die Daten hauptsächlich gefehlt haben. Die nachfolgende Berechnung verdeutlicht, wie viel Prozent der Smartmeter pro Gemeinde keine Daten gesendet haben. Beim Spitzenreiter Udligenswil sind es über 90% der Smartmeter, welche in dem Zeitraum keine Daten gesendet haben."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": "Ein Vergleich in der Zeit während dem \"Tief\" und mehr als ein Jahr danach pro Gemeinde zeigt auf, wo die Daten hauptsächlich gefehlt haben. Die nachfolgende Berechnung verdeutlicht, wie viel Prozent der Smartmeter pro Gemeinde keine Daten gesendet haben. Beim Spitzenreiter Udligenswil sind es über 90% der Smartmeter, welche in dem Zeitraum keine Daten gesendet haben. Nach Rücksprache mit dem Herausgeber der Daten handelt es sich dabei anscheinend um einen Bug beim Exportieren der Daten. Es ist aber unwahrscheinlich, dass bis zum Zeitpunkt der Abgabe dieser Arbeit vollständige Daten zur Verfügung stehen."
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "df = pd.read_sql_query(\"SELECT a.plz, a.anzMeter AS '2022', b.anzMeter AS '2023', (b.anzMeter - a.anzMeter) AS Differenz, ROUND(100.0 * (b.anzMeter - a.anzMeter) / b.anzMeter, 0) AS MissingPercent FROM (SELECT plz, MAX(anzMeter) AS anzMeter FROM smartmeter WHERE strftime('%Y-%m', timestamp) = '2022-06' GROUP BY plz) AS a LEFT JOIN (SELECT plz, MAX(anzMeter) AS anzMeter FROM smartmeter WHERE strftime('%Y-%m', timestamp) = '2023-11' GROUP BY plz) AS b ON a.plz = b.plz ORDER BY MissingPercent DESC;\", connection)\n",
     "df.head(20)\n",
     "\n"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "Mit diesen Daten lässt sich nun beispielsweise Darstellen, wie der Stromverbrauch in einer Gemeine über die letzten drei Jahre angestiegen ist. Nachfolgende Grafik zeigt die Summe der Kwh einer einzelnen Gemeinde an. Jedoch ist die Aussage der Grafik nicht genau, da über den Zeitraum zusätzliche Smartmeter dazugekommen sind und nicht zwingend mehr Strom in der Gemeinde verbraucht wurde, jedoch immer mehr Smartmeter dazugekommen sind und einen Stromverbrauch melden, welcher zuvor nicht einkalkuliert wurde."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": "Mit diesen Daten lässt sich nun beispielsweise Darstellen, wie der Stromverbrauch in einer Gemeine über die letzten drei Jahre angestiegen ist. Nachfolgende Grafik zeigt die Summe der Kwh einer einzelnen Gemeinde an. Jedoch ist die Aussage der Grafik nicht genau, da über den Zeitraum zusätzliche Smartmeter dazugekommen sind und daher nicht zwingend tatsächlich mehr Strom in der Gemeinde verbraucht wurde. Es wurde im Verlaufe der Zeit mehr vom Stromverbrauch von den Smartmetern rapportiert."
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "df = pd.read_sql_query(\"SELECT SUM(valueKwh) as valueKwh, plz,STRFTIME('%Y-%m-%d', timestamp) as day FROM smartmeter where plz=6016 GROUP BY day;\", connection)\n",
@@ -1677,20 +1703,13 @@
     "plot.xaxis.set_major_formatter(mdates.DateFormatter('%m-%Y'))\n",
     "plt.show()"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "Eine treffendere Auswertung erhält man jedoch, wenn die Summe der Kwh durch die Anzahl Smartmeter geteilt wird. Damit wird der Zuwachs von Smartmetern kompensiert. Die entsprechende Darstellung zeigt so auch einen deutlich kleineren Wachstum an, als zuvor. Deutlich zu erkennen sind die Schwankungen zwischen Sommer und Winter."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": "Eine treffendere Auswertung erhält man jedoch, wenn die Summe der Kwh durch die Anzahl Smartmeter geteilt wird. Damit wird der Zuwachs von Smartmetern kompensiert. Die entsprechende Darstellung zeigt so auch einen deutlich kleineren Wachstum an, als zuvor. Deutlich zu erkennen sind die Schwankungen zwischen Sommer und Winter."
   },
   {
    "metadata": {},
@@ -1701,6 +1720,134 @@
     "plot = sns.lineplot(data=df, x='day', y='valueKwh')\n",
     "plot.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
     "plot.xaxis.set_major_formatter(mdates.DateFormatter('%m-%Y'))\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Um einen Verbraucherwert pro Smartmeter zu erhalten, ist es auch möglich, bei jedem Datensatz den verbrauchten Strom durch die Anzahl Smartmeter zu teilen. Die Summe darauf pro Gemeinde gibt den gesamten Stromverbrauch pro Smartmeter in der jeweiligen Gemeinde über den Messzeitraum an. Dabei fällt auf, dass das Dorf mit der PLZ 6280 (Hochdorf) massiv mehr Strom verbraucht als die restlichen Ortschaften."
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_sql_query(\"SELECT s.plz, SUM(valueKwh / anzMeter) as sumValuePerPlz, p.bfsID FROM smartmeter s JOIN plzBfsMapping p ON s.plz = p.plz GROUP BY s.plz ORDER BY sumValuePerPlz DESC;\", connection)\n",
+    "df.head(10)"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Tatsächlich scheint in Hochdorf der Stromverbrauch in der derselben Periode, in welcher zahlreiche Daten von Smartmetern fehlen, massiv höher gewesen zu sein. "
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "kwhUsage = pd.read_sql_query(\"SELECT (SUM(valueKwh) / MAX(anzMeter)) as valueKwh, plz,STRFTIME('%Y-%m-%d', timestamp) as day FROM smartmeter where plz=6280 GROUP BY day;\", connection)\n",
+    "kwhUsage['day'] = pd.to_datetime(kwhUsage['day'])\n",
+    "plot = sns.lineplot(data=kwhUsage, x='day', y='valueKwh')\n",
+    "plot.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "plot.xaxis.set_major_formatter(mdates.DateFormatter('%m-%Y'))\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Ein Bereinigen der Daten durch den Vertrauensintervall verändert die Daten nur minimal, da der Zeitraum mit den potenziell zu hohen Messungen im Vergleich zum gesamten Zeitraum zu lang ist. "
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Statistische Masse berechnen\n",
+    "mean = kwhUsage['valueKwh'].mean()\n",
+    "std = kwhUsage['valueKwh'].std()\n",
+    "\n",
+    "# Vertrauensintervall berechnen (z.B. für 95% Konfidenzniveau)\n",
+    "confidence_level = 0.95\n",
+    "z_score = 1.96  # Z-Wert für 95% Konfidenzniveau\n",
+    "\n",
+    "# Grenzen des Vertrauensintervalls\n",
+    "lower_bound = mean - z_score * std\n",
+    "upper_bound = mean + z_score * std\n",
+    "\n",
+    "# Daten filtern, um nur die Werte innerhalb des Vertrauensintervalls zu behalten\n",
+    "filtered_kwhUsage = kwhUsage[(kwhUsage['valueKwh'] >= lower_bound) & (kwhUsage['valueKwh'] <= upper_bound)]\n",
+    "\n",
+    "plot = sns.lineplot(data=filtered_kwhUsage, x='day', y='valueKwh')\n",
+    "plot.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "plot.xaxis.set_major_formatter(mdates.DateFormatter('%m-%Y'))\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "anzSmartmeter = pd.read_sql_query(\"SELECT AVG(anzMeter) as anzMeter, plz, STRFTIME('%Y-%m-%d', timestamp) as day FROM smartmeter where plz=6280 GROUP BY day;\", connection)\n",
+    "plot = sns.lineplot(data=anzSmartmeter, x='day', y='anzMeter')\n",
+    "\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "kwhUsage = pd.read_sql_query(\"SELECT (SUM(valueKwh) / MAX(anzMeter)) as valueKwh, plz, STRFTIME('%Y-%m-%d', timestamp) as day FROM smartmeter GROUP BY day, plz ORDER BY day DESC;\", connection)\n",
+    "kwhUsagePivot = kwhUsage.pivot(index='day', columns='plz', values='valueKwh')\n",
+    "kwhUsagePivot.head()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "anzahl_serien = len(kwhUsagePivot.columns)\n",
+    "\n",
+    "# Figuren und Subplots vorbereiten\n",
+    "fig, axs = plt.subplots(anzahl_serien, 1, figsize=(10, 3*anzahl_serien), sharex=True)\n",
+    "\n",
+    "# Jede Serie in einem eigenen Subplot plotten\n",
+    "for i, column in enumerate(kwhUsagePivot.columns):\n",
+    "    kwhUsagePivot[column].plot(ax=axs[i], title=column)\n",
+    "    axs[i].set_xlabel('Day')\n",
+    "    axs[i].set_ylabel('valueKwh')\n",
+    "\n",
+    "plt.show()    \n"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# FacetGrid erstellen\n",
+    "g = sns.FacetGrid(kwhUsage, col='plz', col_wrap=3, height=4, sharex=True, sharey=False)\n",
+    "g.map(sns.lineplot, 'day', 'valueKwh')\n",
+    "\n",
+    "# Achsenbeschriftungen und Titel hinzufügen\n",
+    "for ax in g.axes.flat:\n",
+    "    ax.set_xlabel('day')\n",
+    "    ax.set_ylabel('valueKwh')\n",
+    "\n",
+    "\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -1726,7 +1873,10 @@
     "#print(df)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1793,7 +1943,10 @@
     "meteoParameter.head()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1820,7 +1973,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1849,7 +2005,10 @@
     "meteoStations.head()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1873,7 +2032,10 @@
     "meteoStations[[\"lawCityName\", \"stn\"]].groupby('lawCityName').count().sort_values(by=['stn'], ascending=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1904,7 +2066,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1941,7 +2106,10 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1962,7 +2130,10 @@
     "meteoNA_df[['rre150h0']].isna().groupby(meteoNA_df['stn']).sum().sort_values(by=['rre150h0'], ascending=False)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -1995,7 +2166,10 @@
     "#meteoNA_df.head()\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2029,7 +2203,10 @@
     "df.head(80)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2061,7 +2238,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2093,7 +2273,10 @@
     "meteo_df.head()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2114,7 +2297,10 @@
     "meteoNA_df[['tre200h0']].isna().groupby(meteoNA_df['stn']).sum().sort_values(by=['tre200h0'], ascending=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2148,7 +2334,10 @@
     "df.head(80)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2181,7 +2370,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2215,7 +2407,10 @@
     "meteo_df.head()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2236,7 +2431,10 @@
     "meteoNA_df[['sre000h0']].isna().groupby(meteoNA_df['stn']).sum().sort_values(by=['sre000h0'], ascending=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2270,7 +2468,10 @@
     "df.head(80)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2303,7 +2504,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2456,7 +2660,10 @@
     "        return d"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2483,7 +2690,10 @@
     "meteostation_df.head(1000)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2518,7 +2728,10 @@
     "fig.show()\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
@@ -2529,7 +2742,11 @@
    "source": "Im zweiten Schritt werden nun die Messtationen für die Temperatur geladen. Was sich bereits bei der ersten Sichtung angedeutet hatte, wird nun auf der Karte deutlich. In der Mitte des Kanton Luzern besteht eine grössere Lücke. Dafür gibt es eine hohe Dichte im Bereich von Emmen und Luzern. Die Messtation INNRED, welche eine hohe Anzahl an fehlenden Daten aufweist, könnte ignoriert werden, da in der Nähe zwei weitere Stationen zu Verfügung stehen. Das ausschlaggebende Kriterium wird sein, ob grössere Zeiträume fehlen oder nur einzelne Datenpunkte. Anhand dieser Grafik werden nun die Messtationen mit dem Parameter der Temperatur einer BFS-ID zugewiesen."
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "meteoStationsTemp_df = meteostation_df[meteostation_df['meteoParameter'] == 'tre200h0']\n",
@@ -2572,7 +2789,11 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "meteoStationsTemp_df = meteostation_df[meteostation_df['meteoParameter'] == 'rre150h0']\n",
@@ -2601,7 +2822,11 @@
    "source": "Mit der Kartenansicht wird sofort klar, dass die Abdeckung mit den Sonnenstunden nicht sehr gross ist. Die Stationen sind geografisch zwar schön verteilt in den jeweiligen Viertel des Kantons. Wie bei der ersten Daten-Analyse klar wurde verfügen die Standorte SPF und EGO nur Daten bis zum 30.6.2023 somit fällt die westliche Hälfte für diesen Zeitraum weg. Dies muss in der weiteren Analyse berücksichtigt werden. Die Stationen werden anhand der geografischen Nähe zu den Gemeinden manuell zugeteilt."
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "meteoStationsTemp_df = meteostation_df[meteostation_df['meteoParameter'] == 'sre000h0']\n",
@@ -2652,7 +2877,10 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "execution_count": null
