--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -2014,7 +2014,8 @@
    "source": [
     "anzSmartmeter = pd.read_sql_query(\"SELECT AVG(anzMeter) as anzMeter, plz, STRFTIME('%Y-%m-%d', timestamp) as day FROM smartmeter where plz=6280 GROUP BY day;\", connection)\n",
     "plot = sns.lineplot(data=anzSmartmeter, x='day', y='anzMeter')\n",
-    "\n",
+    "plot.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "plot.xaxis.set_major_formatter(mdates.DateFormatter('%m-%Y'))\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -2066,34 +2067,6 @@
     "        label.set_rotation(45)\n",
     "\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "#Test Date Time and manipulation\n",
-    "\n",
-    "#input = '202001240000'\n",
-    "#output = '%Y%m%d%H%M'\n",
-    "\n",
-    "#date = input.strftime('%Y-%m-%d %H:%M')\n",
-    "#date = datetime.datetime.strptime('202001240000', '%Y%m%d%H%M').strftime('%Y-%m-%d %H:%M')\n",
-    "\n",
-    "#df = pd.DataFrame({'date':['2020012400', '2020012400']})\n",
-    "\n",
-    "#print(df)\n",
-    "\n",
-    "#df['date'] += '00'\n",
-    "\n",
-    "#print(df)"
    ],
    "outputs": [],
    "execution_count": null
