--- a/geo_mapping.ipynb
+++ b/geo_mapping.ipynb
@@ -32,22 +32,30 @@
     "Für dieses Notebook werden folgende Module eingesetzt:\n",
     "- __sqlite3__\n",
     "    Wird für die Datenbank verwendet\n",
+    "- __warnings__\n",
+    "    Um FutureWarnings zu unterdrücken, welche in der aktuellen Pandas Version nicht relevant sind\n",
     "- __pandas__\n",
     "    Wird gebraucht um die CSV Dateien zu lesen und als Dataframe in die SQLite Datenbank zu laden\n",
     "- __geopandas__\n",
     "    Wird gebraucht um Geografische Karten darzustellen\n",
-    "- __numpy__\n",
-    "    Wird benötigt um die NaN Werte in den Dataframes mit NULL zu ersetzen\n",
-    "- __glob__\n",
-    "    Wird eingesetzt um gesamte Folders in einem Loop in die SQLite Datenbank zu laden\n",
+    "- __math__\n",
+    "    Wird verwendet für mathematische Funktionen\n",
     "- __seaborn__\n",
     "    Wird für Daten-Visualisierungen verwendet. Basiert auf matplotlib\n",
     "- __matplotlib__\n",
     "    Wird verwendet für statistische Berechnungen sowie Darstellungen\n",
     "- __plotly__\n",
     "    Wird verwendet für statistische Berechnungen sowie Darstellungen\n",
-    "- __math__\n",
-    "    Wir verwendet für mathematische Funktionen"
+    "- __numpy__\n",
+    "    Wird benötigt um die NaN Werte in den Dataframes mit NULL zu ersetzen\n",
+    "- __statsmodels__\n",
+    "    Wird eingesetzt \n",
+    "- __pmdarima__\n",
+    "    Wird eingesetzt um leere Datensätze in Timeseries aufzufüllen\n",
+    "- __tbats__\n",
+    "    Wird für das Forecasting von Timeseries verwendet \n",
+    "- __sklearn__\n",
+    "    Wird für das Machine Learning eingesetzt "
    ]
   },
   {
@@ -56,35 +64,34 @@
    "metadata": {},
    "source": [
     "# Load GEOPANDAS library\n",
-    "import geopandas as gpd\n",
+    "import os, sqlite3\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
     "import pandas as pd\n",
-    "import os, sqlite3\n",
+    "import geopandas as gpd\n",
+    "\n",
     "import math\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
-    "from pygments.lexers import go\n",
-    "from sklearn.metrics import r2_score\n",
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
     "import numpy as np\n",
+    "\n",
+    "import statsmodels.api as sm\n",
     "from statsmodels.tsa.stl.mstl import MSTL\n",
     "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
     "import pmdarima as pm\n",
     "from tbats import TBATS, BATS\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import statsmodels.api as sm\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "\n",
-    "import plotly.express as px\n",
-    "import plotly.io as pio\n",
-    "\n",
     "# Settings for clean html export\n",
-    "pio.renderers.default = \"plotly_mimetype+notebook\"\n",
-    "\n",
-    "pd.set_option('mode.chained_assignment', None)\n"
+    "pio.renderers.default = \"plotly_mimetype+notebook\""
    ],
    "outputs": [],
    "execution_count": null
