--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -3216,8 +3216,28 @@
     "### Zusammenfassung\n",
     "Generell kann die Aussage getroffen werden, dass für jedes Grad wärmer der Stromverbrauch um ca. 0.5 kWh abnimmt, in dieser linearen Betrachtung. Aufgrund der Residuale und der letzten Test Grafik scheint es noch weitere Faktoren zu geben, die den Stromverbrauch beeinflussen. Ebenfalls scheint es grafisch nach einem Underfitting auszusehen.\n",
     "## Zusammenfassung Forecasting\n",
-    "Eine Vorhersage alleine basierend auf der Zeitreihe des Stromverbrauches ist nicht sinnvoll mit den angewandten Algorithmen. Ein lineares Modell scheint gut zu passen. Die tiefere Betrachtung zeigt aber eine Tendenz des Underfitting. Als nächster Schritt würde sich ein Long Short-Term Memory LSTM Modell anbieten, welches auf dem recurrent neural network RNN basiert. In diesem können verschiedene Inputs geliefert werden um einen Output zu liefern. Dies wird nicht weiter in dieser Arbeit behandelt."
+    "Eine Vorhersage alleine basierend auf der Zeitreihe des Stromverbrauches ist nicht sinnvoll mit den angewandten Algorithmen. Ein lineares Modell scheint gut zu passen. Die tiefere Betrachtung zeigt aber eine Tendenz des Underfitting. Als nächster Schritt würde sich ein Long Short-Term Memory LSTM Modell anbieten, welches auf dem recurrent neural network RNN basiert. In diesem können verschiedene Inputs geliefert werden um einen Output zu liefern. Dies wird nicht weiter in dieser Arbeit behandelt.\n",
+    "\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Fazit\n",
+    "## Datenqualität & Auswertungen\n",
+    "Die gesammelten Daten lassen eine Auswertung in die angestrebte Richtung zu. Besonders die Meteo-Daten sind zwar kompliziert in der Handhabung, lassen aber viele Rückschlüsse und Auswertungen zu. Auch die demografischen Daten des Bundes sind sehr ausführlich, wenn auch teilweise nicht top aktuell. Die Smartmeter Daten stellen jedoch die Schwachstelle dar. Die Daten weisen Ungenauigkeiten und offensichtliche Fehler auf. Diese fehlerhaften Datensätze ziehen sich in einigen Fällen über mehrere Monate hinweg, was das Herausfiltern und Auffüllen der Daten sinnlos macht. \n",
+    "\n",
+    "Da die Daten nur für Gemeinden im Kanton Luzern zur Verfügung stehen, ist das Datenset betreffend der Ortschaften stark begrenzt und fehlerhafte Daten engen es noch weiter ein. Um aussagekräftige Zusammenhänge zwischen Stromverbrauch, demografischen Daten und Meteo-Daten ziehen zu können, ist das Datenset zu klein und geografisch zu stark begrenzt. Weiter wäre es interessant, wenn die Smart Meter auch Angaben über den eingespeisten Strom machen würden. Damit wären in Verbindung mit den installierten Solaranlagen weitere Auswertungen möglich, ob das Potenzial ausgeschöpft wird. Leider fehlen aktuell Informationen, über den tatsächlich mit den installierten Solaranlagen produzierten Storm. \n",
+    "\n",
+    "Weiter wäre eine Kategorisierung der Smartmeter Daten nach privat und gewerblich sinnvoll. Zwar werden Grossverbraucher herausgefiltert, der Vergleich von Anzahl Smartmeter mit Anzahl Haushalten zeigt jedoch, dass je nach Gemeinde auch zahlreiche Messungen aus dem Gewerbe vorhanden sind. Dadurch sind keine separaten Auswertungen und Trendanalysen möglich.\n",
+    "\n",
+    "## Persönliches Fazit\n",
+    "Wir haben uns für das Projekt eine zu breite Datenbasis vorgenommen. Dies machte einerseits das Aufbereiten und Analysieren der Daten sehr aufwendig, andererseits brachte es auch unsere IDEs teilweise ans Limit und brauchte jeweils lange für eine Durchführung. Besonders die Meteo-Daten waren sehr zeitintensiv und die Smartmeter Daten haben etwas enttäuscht. Einerseits durch die schlechte Datenqualität, andererseits dadurch, dass nur die PLZ zur Verfügung stand. Das eindeutige Mapping von PLZ auf die BFS-ID war aufwendig und musste von Hand vorgenommen werden. Da das Datenset auf den Kanton Luzern beschränkt ist, war dies möglich, jedoch wäre es bei einer Ausweitung auf die ganze Schweiz sehr unpraktisch. Hier empfiehlt es sich für die CKW AG, die Datensätze in Zukunft mit BFS-ID zur Verfügung zu stellen, da auch sämtliche anderen Datensätze damit arbeiten.\n",
+    "\n",
+    "Insofern waren die Ergebnisse der Auswertungen im Hinblick auf die Fragestellung und die breite Datenbasis eher ernüchternd und aussagekräftige Zusammenhänge konnten keine festgestellt werden und für weitere, tiefere Auswertungen fehlte aufgrund der aufwendigen Aufbereitung der breiten Datenbasis die Zeit. Die ersten Versuche mit ML haben aber gezeigt, dass hier potenzial besteht, anhand der verschiedenen Parametern der Meteo-Daten den Stromverbrauch vorherzusagen.\n"
+   ],
+   "id": "6076fe78793f477b"
   }
  ],
  "metadata": {
